force-app/main/default/objects/Product__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Adventurer</fullName>
            </value>
            <value>
                <fullName>Explorer</fullName>
            </value>
            <value>
                <fullName>Mountaineer</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>