force-app/main/default/objects/Product__c/fields/Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Number_Field__c</fullName>
    <label>Number Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>