force-app/main/default/objects/Product__c/fields/Test_field__c.field-meta.xml
<CustomField>
    <fullName>Test_field__c</fullName>
    <description>test</description>
    <label>Test field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>